add copyleft, ignore gedit temp files, minor changes in issues/show view

--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -105,7 +105,13 @@ end %>
 <div id="relations">
 <%= render :partial => 'relations' %>
 </div>
+
 <% end %>
+
+<hr />
+<div id="qa_status">
+<%= call_hook(:ticket_testing_results, :issue => @issue) %>
+</div>
 
 </div>
 
